Started the team area, a couple layout issues

--- a/style.css
+++ b/style.css
@@ -136,7 +136,21 @@ li {
     background-color: #1f2937;
 }
 
+
+.team {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.box1 .box2 .box3 .box4 {
+    display: flex;
+    flex-direction: row;
+}
+
+
 .team h2 {
+    justify-content: center;
     font-size: 32px;
     color: #1f2937;
     font-weight: 900;
@@ -181,6 +195,7 @@ li {
     padding: 12px 24px;
     border-radius: 8px;
 }
+
 
 .footer {
     display: flex;
